welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: type mismatch;
 found   : Unit
 required: Int
  if (num==1){
  ^